--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
             </p> -->
          <h4>Submit a review</h4>
          <form id="reviewform">
-            <input form="reviewform" type="text" name="newreview" id="newreview" placeholder="What did you think?" />
-            <input form="reviewform" type="text" name="revtitle" id="revtitle" value="" />
+            <input form="reviewform" type="text" name="newreview" id="newreview" placeholder="What did you think?" autocomplete="off" />
             <div id="subtext">
                <input form="reviewform" type="submit" value="Submit!" />
                <div id="formerrors"></div>
